Fix spacing in cards

--- a/src/styles/sections/_work.scss
+++ b/src/styles/sections/_work.scss
@@ -92,7 +92,7 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 0.3rem;
 
       @include custom.respond-above(lg) {
         position: absolute;
@@ -114,8 +114,13 @@
         text-align: left;
         color: #fff;
 
+        @include custom.respond-above(md) {
+          font-size: 30px;
+          font-weight: 700;
+          line-height: 32px;
+        }
+
         @include custom.respond-above(lg) {
-          font-size: 40px;
           font-weight: 700;
           line-height: 32px;
         }
